<resources>
    <string name="app_name">智能窗户</string>
    <string name="go">login</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="action_settings">Settings</string>
    <string name="changepw">修改密码</string>
    <string name="login">登录</string>
    <string name="newpassword">新密码</string>
    <string name="oldpasswors">旧密码</string>
    <string name="register">注册</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">注册</string>
    <string name="change">修改</string>
    <string name="back">返回</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
