<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context="ff.windowcontrol.gui.activities.ChangePasswordActivity">

<android.support.v7.widget.CardView
    android:id="@+id/cv_add"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_centerInParent="true"
    android:layout_margin="20dp"
    app:cardBackgroundColor="#8d95a7"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/changePwli"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="33dp"
            android:text="@string/changepw"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingRight="30dp"
            android:paddingLeft="50dp"
            android:paddingEnd="30dp"
            android:paddingStart="50dp"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5"
                >

                <EditText
                    android:id="@+id/changePwId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    android:textColor="#6a8079"
                    android:hint="@string/Username"
                    android:textColorHint="#CDCDC1"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingRight="30dp"
            android:paddingLeft="50dp"
            android:paddingEnd="30dp"
            android:paddingStart="50dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">


                <EditText
                    android:id="@+id/changePw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    android:textColor="#6a8079"
                    android:hint="@string/oldpasswors"
                    android:inputType="textPassword"
                    android:textColorHint="#CDCDC1"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingRight="30dp"
            android:paddingLeft="50dp"
            android:paddingEnd="30dp"
            android:paddingStart="50dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">
                <EditText
                    android:id="@+id/changePwNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    android:textColor="#6a8079"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:textColorHint="#CDCDC1"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/changePwBtn"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bt_shape_3"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/change"
            android:textColor="#d3d3d3" />
    </LinearLayout>
</android.support.v7.widget.CardView>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/returnlogin"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_alignEnd="@id/cv_add"
    android:layout_alignRight="@id/cv_add"
    android:layout_alignTop="@id/cv_add"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="18dp"
    android:layout_marginTop="15dp"
    android:src="@drawable/plus_x"
    android:transitionName="loginFab"
    app:fabSize="normal" />


</RelativeLayout>
